--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>Cursos da Alura</title>
 </head>
 <body>
-    <ul>
+    <ul
+<h1> meu titulo h1 </h1>
         <li>Vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
-
         <li>Integração Contínua</li>
     </ul>
 </body>
