--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <li>Vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
-
+<li> nova lista</li>
         <li>Integração Contínua</li>
     </ul>
 </body>
